--- a/act/CSS/perfil.css
+++ b/act/CSS/perfil.css
@@ -3,10 +3,14 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
 }
+
+
+
 .logoYPerfil {
   clear: both;
   padding-bottom: 5%;
 }
+
 .logo {
   float: left;
   height: 100px;
@@ -14,6 +18,7 @@ body {
   margin-left: 2%;
   margin-top: 0.5%;
 }
+
 .imagenPerfil {
   float: right;
   height: 40px;
@@ -22,6 +27,7 @@ body {
   border-radius: 50%;
   background-color: lightcyan;
 }
+
 .separador {
   clear: both;
   border-top: 3px solid #ccc;
@@ -36,10 +42,12 @@ body {
   text-align: center;
   border-right: 3px solid #ccc;
 }
+
 .sidebar h2 {
   margin-left: 15%;
   text-align: left;
 }
+
 .menu-item {
   float: left;
   clear: both;
@@ -50,15 +58,18 @@ body {
   text-align: left;
   border-radius: 15px;
 }
+
 .menu-item:hover {
   background-color: lightblue;
 }
+
 .menu-item img {
   float: left;
   height: 40px;
   width: 40px;
   margin: 0;
 }
+
 .menu-item h3 {
   float: left;
   margin: 0;
@@ -66,38 +77,71 @@ body {
   font-size: 16px;
 }
 
-.infoUsuarioDatos{
-    float: left;
-    overflow: hidden;
+.infoUsuarioDatos {
+  float: left;
+  overflow: hidden;
+
 }
 
-.infoUsuarioValoraciones{
-    float: right;
-    overflow: hidden;
-}
+
+
+
 
 .infoUsuario {
-  overflow: hidden;
   float: left;
   background-color: lightblue;
-  margin-left: 10%;
+  margin-left: 18%;
   margin-top: 20px;
-  padding: 20px;
+  max-width: 45%;
   border-radius: 18px;
+  padding-top: 1%;
 }
-.infoUsuario img {
+
+.infoUsuarioDatos img {
   float: left;
   width: 80px;
   height: 80px;
+  max-width: 80px;
+  margin-left: 15%;
+
 }
+
+.infoUsuarioDatos h2 {
+  float: left;
+  padding-top: 5%;
+  max-width: 2%;
+}
+
+.infoUsuarioDatos p {
+  max-width: 60%;
+  margin-left: 15%;
+  clear: left;
+}
+
+.infoUsuarioValoraciones {
+  float: right;
+}
+
 .infoTrabajos {
   float: left;
-
-  max-width: 100%;
-  background-color: rgba(138, 202, 224, 0.212);
-  padding: 4%;
-  margin: 17px;
+  clear: left;
+  max-width: 70%;
+  width: 100%;
   text-align: center;
+}
+
+.infoTrabajos hr {
+  max-width: 100%;
+}
+
+
+.separadorInterior {
+  float: left;
+  text-align: center;
+  margin-top: 2%;
+  margin-left: 8%;
+  width: 60%;
+  border-top: 1px solid #cccccc6c;
 }
 
 footer {
