--- a/act/CSS/index.css
+++ b/act/CSS/index.css
@@ -11,12 +11,13 @@ header {
     border-bottom-right-radius: 90px;
     padding: 0px 20px;
     overflow: hidden;
+    height: 80px;
+    position: relative;
 }
 
 .logo-container {
     float: left;
-    display: flex;
-    align-items: center;
+    height: 100%;
 }
 
 .logo-container .logo-icon {
@@ -24,13 +25,13 @@ header {
     height: 75px;
     margin-right: 8px;
     border-radius: 5px;
+    vertical-align: middle;
+    display: inline-block;
 }
 
 .right-header {
-    margin: 20px 20px;
     float: right;
-    display: flex;
-    align-items: center;
+    height: 100%;
 }
 
 .texto-servicios {
@@ -39,12 +40,22 @@ header {
     font-size: 14px;
     margin-right: 20px;
     cursor: pointer;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 80px;
+}
+
+.icono-perfil {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
 }
 
 .icono-perfil .profile-icon{
     width: 35px;
     height: 35px;
     border-radius: 70%;
+    line-height: 80px;
 }
 
 /* SECTION 1 */
@@ -68,22 +79,27 @@ header {
 }
 
 .search-bar {
-    display: inline-flex;
     background-color: #f0f0f0;
     padding: 5px;
     border-radius: 20px;
+    width: 326px;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
 .search-bar input {
+    float: left;
     border: none;
     outline: none;
     padding: 8px 12px;
     width: 250px;
     border-radius: 20px 0 0 20px;
     font-size: 14px;
+    box-sizing: border-box;
 }
 
 .search-bar button {
+    float: right;
     background-color: #007BFF;
     color: white;
     border: none;
@@ -91,6 +107,7 @@ header {
     border-radius: 0 20px 20px 0;
     cursor: pointer;
     font-weight: bold;
+    box-sizing: border-box;
 }
 
 .search-bar button:hover {
@@ -105,7 +122,7 @@ header {
     border-top-right-radius: 20px;
     padding: 20px;
     overflow: hidden;
-    width: 97.5%;
+    width: 97.8%;
     text-align: center;
     margin-top: -2%;
 }
@@ -116,17 +133,6 @@ header {
     padding: 20px;
     overflow: hidden;
     text-align: center;
-}
-
-.courses h2 {
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-    margin-bottom: 20px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    width: 100%;
 }
 
 .course {
@@ -165,20 +171,22 @@ header {
 }
 
 .course-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    overflow: hidden;
+    position: relative;
     padding-top: 10px;
     border-top: 10px solid #C5D9F8;
 }
 
 .course-footer .price {
+    float: left;
     font-weight: bold;
     color: #333;
     font-size: 14px;
+    line-height: 24px;
 }
 
 .course-footer button {
+    float: right;
     background-color: #007BFF;
     color: white;
     border: none;
@@ -187,6 +195,7 @@ header {
     cursor: pointer;
     font-weight: bold;
     font-size: 12px;
+    line-height: 16px;
 }
 
 .course-footer button:hover {
