--- a/act/CSS/index.css
+++ b/act/CSS/index.css
@@ -50,7 +50,7 @@ header {
     margin-left: 10px;
 }
 
-.icono-perfil .profile-icon{
+.icono-perfil .profile-icon {
     width: 35px;
     height: 35px;
     border-radius: 70%;
@@ -60,28 +60,58 @@ header {
 /* SECTION 1 */
 
 .hero {
-    background-color: #C5D9F8;
+    position: relative;
     padding: 40px 20px;
+    text-align: center;
+    min-height: 20vh;
+    background-color: #c5d9f885;
+    overflow: hidden;
     text-align: center;
 }
 
+.hero-video {
+    top: 0.5;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hero-video-izquierda {
+    width: 45%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    float: right;
+}
+
+
+.hero-content {
+    position: relative;
+    color: black;
+    padding-top:3% ;
+}
+.hero-content p{
+    font-size: 18px;
+    color: rgba(17, 17, 17, 0.548);
+}
+
 .hero h2 {
-    font-size: 32px;
+    font-size: 35px;
     font-weight: bold;
-    color: #333;
-    margin-bottom: 30px;
+    color: white;
+    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .search-container {
     text-align: center;
-    margin-bottom: 40px;
+
 }
 
 .search-bar {
     background-color: #f0f0f0;
     padding: 5px;
     border-radius: 20px;
-    width: 326px;
+    width: 30%;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -91,7 +121,7 @@ header {
     border: none;
     outline: none;
     padding: 8px 12px;
-    width: 250px;
+    width:80%;
     border-radius: 20px 0 0 20px;
     font-size: 14px;
     box-sizing: border-box;
@@ -103,6 +133,7 @@ header {
     color: white;
     border: none;
     padding: 8px 15px;
+    width: 20%;
     border-radius: 0 20px 20px 0;
     cursor: pointer;
     font-weight: bold;
@@ -111,6 +142,18 @@ header {
 
 .search-bar button:hover {
     background-color: #0056b3;
+}
+
+.search-container-btn button{
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 16px;
 }
 
 /* SECTION 2 */
