--- a/act/CSS/index.css
+++ b/act/CSS/index.css
@@ -112,7 +112,7 @@ header {
 }
 
 .search-bar {
-  background-color: #f0f0f0;
+  background-color: white;
   padding: 5px;
   border-radius: 20px;
   width: 30%;
