--- a/act/CSS/indexcopia.css
+++ b/act/CSS/indexcopia.css
@@ -3,6 +3,38 @@
   width: 350px;
 }
 
+@keyframes heroScroll {
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+}
+@keyframes vibrar {
+  5%, 25%, 45%, 65%, 85% {
+    transform: translateX(-5px);
+  }
+  15%, 35%, 55%, 75%, 95% {
+    transform: translateX(5px);
+  }
+}
+@keyframes pulse {
+  0% {
+    opacity: 0.4;
+    transform: scale(0.97);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0.4;
+    transform: scale(0.97);
+  }
+}
 .btnSearch-bar {
   background-color: #007bff;
   color: white;
@@ -35,21 +67,6 @@ button {
   float: left;
 }
 
-.profile-icon {
-  width: 35px;
-  height: 35px;
-}
-
-img {
-  width: 100%;
-  height: 180px;
-}
-
-.hero-video {
-  object-fit: cover;
-  float: right;
-}
-
 .course-completo {
   width: 350px;
   height: 370px;
@@ -59,7 +76,8 @@ img {
   vertical-align: top;
   perspective: 1000px;
 }
-.course-completo .front, .course-completo .back {
+.course-completo .front,
+.course-completo .back {
   width: 100%;
   height: 100%;
   border-radius: 8px;
@@ -176,7 +194,7 @@ img {
   line-height: 16px;
 }
 .course-completo .front .course-footer button:hover {
-  background-color: rgb(0, 86.1, 178.5);
+  background-color: #007bff;
 }
 .course-completo .back h4 {
   margin: 10px 0;
@@ -211,21 +229,120 @@ img {
   font-size: 12px;
 }
 .course-completo .back button:hover {
-  background-color: rgb(0, 86.1, 178.5);
+  background-color: #007bff;
 }
 
-.logo-container {
+.profile-icon {
+  width: 35px;
+  height: 35px;
+}
+
+img {
+  width: 100%;
+  height: 180px;
+}
+
+.hero-video {
+  object-fit: cover;
+  float: right;
+}
+
+header {
+  overflow: hidden;
+}
+header .logo-container {
   float: left;
   height: 100%;
 }
-
-.logo-icon {
+header .logo-icon {
   width: 150px;
   height: 75px;
   margin-right: 8px;
   border-radius: 8px;
   vertical-align: middle;
   display: inline-block;
+}
+header .right-header {
+  float: right;
+  height: 100%;
+}
+header .texto-servicios {
+  color: #333;
+  font-weight: bold;
+  font-size: 14px;
+  margin-right: 20px;
+  cursor: pointer;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 80px;
+}
+header .icono-perfil {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+header .profile-icon {
+  width: 35px;
+  height: 35px;
+  border-radius: 18px;
+  line-height: 80px;
+}
+
+.hero {
+  position: relative;
+  padding: 40px 20px;
+  text-align: center;
+  min-height: 20vh;
+  background-color: rgba(197, 217, 248, 0.5215686275);
+  overflow: hidden;
+  opacity: 0;
+  transform: translateY(30px);
+  animation: heroScroll 1.5s linear both;
+}
+.hero .hero-video {
+  top: 0.5px;
+  left: 0;
+  width: 45%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+  float: right;
+}
+.hero .hero-content {
+  position: relative;
+  color: black;
+  padding-top: 3%;
+}
+.hero .hero-content p {
+  font-size: 18px;
+  color: rgba(17, 17, 17, 0.548);
+}
+.hero .hero-content h2 {
+  font-size: 35px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+}
+.hero .search-container {
+  text-align: center;
+}
+.hero .search-container .search-bar {
+  background-color: white;
+  padding: 5px;
+  border-radius: 18px;
+  width: 35%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.hero .search-container .search-bar input {
+  float: left;
+  border: none;
+  outline: none;
+  padding: 8px 12px;
+  width: 80%;
+  border-radius: 18px 0 0 18px;
+  font-size: 14px;
+  box-sizing: border-box;
 }
 
 /*# sourceMappingURL=indexcopia.css.map */
