--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,9 +1,13 @@
 $color-background-page: white;
+$color-negro:black;
 $color-background-trasera:#1a4c6e;
 $color-btn:#007bff;
 $color-btn-hover:#0056b3;
 $color-footer:#c5d9f8;
 $text-color: #333;
+$color-background-hero:#c5d9f885;
+$color-h2Hero:rgba(0, 0, 0, 0.5);
+$color-pHeroContent:rgba(17, 17, 17, 0.548);
 
 // Paleta de colores por categoría
 $categories: (
