--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,7 +1,4 @@
-@use "mixins" as *;
-@use "colores" as *;
-@use "dimensiones" as *;
 @use "botones" as *;
-@use "imagenes" as *;
 @use "tarjetas" as *;
 @use "header" as *;
+@use "section" as *;
