--- a/scss/_tarjetas.scss
+++ b/scss/_tarjetas.scss
@@ -4,7 +4,8 @@
 // ===== MIXIN PARA EFECTO FLIP =====
 @mixin flip-card($duration: 0.8s) {
   perspective: 1000px;
-  .front, .back {
+  .front,
+  .back {
     width: 100%;
     height: 100%;
     border-radius: $border-radius;
@@ -28,8 +29,12 @@
     transform: rotateY(180deg);
   }
   &:hover {
-    .front { transform: rotateY(180deg); }
-    .back { transform: rotateY(0deg); }
+    .front {
+      transform: rotateY(180deg);
+    }
+    .back {
+      transform: rotateY(0deg);
+    }
   }
 }
 
@@ -119,7 +124,8 @@
         font-size: 12px;
         line-height: 16px;
         &:hover {
-          background-color: darken($color-btn, 15%);
+          background-color: $color-btn;
+          //background-color: color.darken($color-btn, 15%);
         }
       }
     }
@@ -158,7 +164,8 @@
       font-weight: bold;
       font-size: 12px;
       &:hover {
-        background-color: darken($color-btn, 15%);
+        background-color: $color-btn;
+        //background-color: color.darken($color-btn, 15%);
       }
     }
   }
