--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -2,6 +2,7 @@
 @use "colores" as *;
 @use "dimensiones" as *;
 @use "caracteristicas" as *;
+@use "botones" as *;
 .hero {
   position: $posicionRelativa;
   padding: $margenOPaddingDe40 $margenOPaddingDe20;
@@ -57,6 +58,9 @@
             border-radius: $border-radius-grande $sinDimensiones $sinDimensiones $border-radius-grande;
             font-size: $letraTamanyo;
             box-sizing: $tamanyo-caja;
+        }
+        button{
+            padding: 8px;
         }
 
     }
