--- a/scss/_tarjetas.scss
+++ b/scss/_tarjetas.scss
@@ -124,7 +124,7 @@
         font-size: 12px;
         line-height: 16px;
         &:hover {
-          background-color: $color-btn;
+          background-color: $color-btn-hover;
           //background-color: color.darken($color-btn, 15%);
         }
       }
